Concluído a migração do layout da aplicação

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -36,3 +36,10 @@ body {
   background-repeat: no-repeat;
   background-position: center;
 }
+
+label.markup {
+  display: inline-flex!important;
+  position: absolute;
+  white-space: nowrap;
+  cursor: pointer;
+}
