--- a/public/css/main.css
+++ b/public/css/main.css
@@ -44,3 +44,17 @@ label.markup {
   white-space: nowrap;
   cursor: pointer;
 }
+
+.loading-overlay {
+  background-color: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1200;
+  transition: opacity .5s ease-in-out;
+}
